--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
         "@fortawesome/free-brands-svg-icons": "^6.3.0",
         "@fortawesome/free-solid-svg-icons": "^6.2.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
+        "@hookform/resolvers": "^2.9.11",
+        "@reduxjs/toolkit": "^1.9.2",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -15,10 +17,14 @@
         "classnames": "^2.3.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.43.1",
+        "react-redux": "^8.0.5",
         "react-router-dom": "^6.8.0",
         "react-scripts": "5.0.1",
+        "redux-saga": "^1.2.2",
         "swiper": "^9.0.3",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "yup": "^1.0.0"
     },
     "scripts": {
         "start": "react-app-rewired start",
