--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
         "@tippyjs/react": "^4.2.6",
         "axios": "^1.3.2",
         "classnames": "^2.3.2",
+        "persistent-storage": "^3.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.43.1",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.8.0",
         "react-scripts": "5.0.1",
+        "redux-persist": "^6.0.0",
         "redux-saga": "^1.2.2",
         "swiper": "^9.0.3",
         "web-vitals": "^2.1.4",
