--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "react-scripts": "5.0.1",
         "redux-persist": "^6.0.0",
         "redux-saga": "^1.2.2",
-        "swiper": "^9.0.3",
+        "sweetalert2": "^11.7.2",
         "web-vitals": "^2.1.4",
         "yup": "^1.0.0"
     },
