--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "persistent-storage": "^3.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-glider": "^4.0.2",
         "react-hook-form": "^7.43.1",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.8.0",
