--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
         "persistent-storage": "^3.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-glider": "^4.0.2",
         "react-hook-form": "^7.43.1",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.8.0",
@@ -26,6 +25,7 @@
         "redux-persist": "^6.0.0",
         "redux-saga": "^1.2.2",
         "sweetalert2": "^11.7.2",
+        "swiper": "^9.0.5",
         "web-vitals": "^2.1.4",
         "yup": "^1.0.0"
     },
