--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.8.0",
         "react-scripts": "5.0.1",
+        "react-select": "^5.7.0",
         "redux-persist": "^6.0.0",
         "redux-saga": "^1.2.2",
         "sweetalert2": "^11.7.2",
