--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@hookform/resolvers": "^2.9.11",
         "@mui/material": "^5.11.11",
+        "@popperjs/core": "^2.11.6",
         "@reduxjs/toolkit": "^1.9.2",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
@@ -23,6 +24,7 @@
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.43.1",
         "react-iframe": "^1.8.5",
+        "react-popper": "^2.3.0",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.8.0",
         "react-scripts": "5.0.1",
